Доверстал главную страницу

--- a/less/blocks/main-nav.less
+++ b/less/blocks/main-nav.less
@@ -8,7 +8,9 @@
   padding: 10px;
   min-height: 120px;
 
-  background-color: rgba(14,19,38, 0.7);
+  background-color: rgba(14,19,38, 0.8);
+
+  font-size: 1rem;
 }
 
 .main-nav__avatar-container {
@@ -34,16 +36,6 @@
   font-family: "roboto condensed", sans-serif;
   color: #ffffff;
   text-decoration: none;
-}
-
-.contact-links__link {
-  display: block;
-  width: 50px;
-  height: 50px;
-
-  background-color: pink;
-
-  font-size: 0;
 }
 
 @media @mobile-width-only {
@@ -82,7 +74,7 @@
       padding-left: 20px;
 
       text-transform: uppercase;
-      font-size: 20px;
+      font-size: 1.25rem;
       font-weight: bold;
 
     }
@@ -108,8 +100,11 @@
   }
 
   .main-nav_opened {
+    background-color: rgba(14,19,38, 1);
+
     .main-nav__list {
       position: absolute;
+      z-index: 5;
       top: 120px;
       left: 0;
 
@@ -119,10 +114,7 @@
 
     .main-nav__item {
       display: list-item;
-
-      &_current .main-nav__item-link {
-        background-color: rgba(14,19,38, 0.9);
-      }
+      background-color: rgba(14,19,38, 1);
     }
 
     .main-nav__item-link {
@@ -138,7 +130,7 @@
       background-color: rgba(14,19,38, 0.7);
 
       text-transform: uppercase;
-      font-size: 20px;
+      font-size: 1.25rem;
       font-weight: bold;
 
       transition: background-color 0.5s, color 0.5s;
@@ -178,10 +170,6 @@
       }
     }
   }
-
-  .contact-links__link {
-    display: none;
-  }
 }
 
 @media @tablet-width {
@@ -192,8 +180,19 @@
 
   .main-nav {
     flex-direction: column;
+    justify-content: flex-start;
+
 
     width: 28%;
+    max-width: 300px;
+    min-width: 270px;
+    padding-top: 50px;
+    padding-bottom: 50px;
+  }
+
+  .main-nav__list {
+    width: 100%;
+    margin-bottom: 100px;
   }
 
   .main-nav__item {
@@ -221,7 +220,7 @@
     padding-left: 20px;
 
 
-    font-size: 20px;
+    font-size: 1.5rem;
     font-weight: 100;
 
     &:hover {
