--- a/less/styles.less
+++ b/less/styles.less
@@ -3,4 +3,4 @@
 @import "blocks/about.less";
 @import "blocks/main-nav.less";
 @import "blocks/previous-clients.less";
-@import "blocks/links.less";
+@import "blocks/contact-links.less";
