--- a/less/scaffolding.less
+++ b/less/scaffolding.less
@@ -42,6 +42,7 @@
 
 html {
   box-sizing: border-box;
+  font-size: 16px;
 }
 
 * {
@@ -55,6 +56,9 @@ body {
   flex-direction: column;
 
   background-color: #4a1739;
+  background-image: url("../img/body-bg.jpg");
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
 
   font-family: "roboto condensed", sans-serif;
   color: #ffffff;
@@ -67,10 +71,65 @@ body {
   outline: 1px green dashed;
 }
 
+.main {
+  width: 100%;
+  padding-left: 10px;
+  padding-right: 10px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+
+  background-color: rgba(11,17,36, 0.7);
+}
+
+.main__title {
+  position: relative;
+  font-weight: 100;
+
+  &::after {
+    content: "";
+    position: absolute;
+    bottom: -3px;
+    left: 0;
+    right: 0;
+
+    height: 3px;
+
+    background-color: #df358d;
+
+  }
+}
+
+.btn {
+  display: block;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-left: 30px;
+  padding-right: 30px;
+
+  background-color: #ff4ba8;
+
+  font-size: 1rem;
+  font-weight: 100;
+  color: #ffffff;
+  text-decoration: none;
+  text-transform: uppercase;
+
+
+}
+
 @media @tablet-width {
 
   body {
     flex-direction: row;
+  }
+}
+
+@media @desktop-width {
+
+  .container-fluid {
+    max-width: 1024px;
   }
 
 }
