--- a/less/styles.less
+++ b/less/styles.less
@@ -4,3 +4,4 @@
 @import "blocks/main-nav.less";
 @import "blocks/previous-clients.less";
 @import "blocks/contact-links.less";
+@import "blocks/works.less";
