добавил страницу с контактами, убрал ошибки из консоли

--- a/less/scaffolding.less
+++ b/less/scaffolding.less
@@ -62,6 +62,10 @@ body {
 
   font-family: "roboto condensed", sans-serif;
   color: #ffffff;
+
+  &.body-contacts {
+    height: 100vh;
+  }
 }
 
 .container-fluid {
