--- a/less/styles.less
+++ b/less/styles.less
@@ -5,3 +5,4 @@
 @import "blocks/previous-clients.less";
 @import "blocks/contact-links.less";
 @import "blocks/works.less";
+@import "blocks/contacts.less";
