добавил страницу лабораторные работы, добавил ссылку на  viber

--- a/less/blocks/contacts.less
+++ b/less/blocks/contacts.less
@@ -71,3 +71,16 @@
   }
 
 }
+
+.viber {
+  display: inline-block;
+  vertical-align: middle;
+  width: 40px;
+  height: 40px;
+
+  background-image: url("../img/viber.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+
+  font-size: 0;
+}
